# klances

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUTHORS  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  artifacthub-repo.yml  dev-requirements.txt  index.yaml  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  deps-update.yml  docker-publish.yml  helm-release.yml
charts/klances/: Chart.yaml  README.md  values.yaml
charts/klances/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
devarena/: README.md  layout.py  layout_textual.py  layout_textual.tcss  test-k8s.py
docker-files/: Dockerfile
docs/: openapi.json
src/: dev.py  server.py
src/api/: k8s_client.py  main.py  models.py  utils.py  version.py
src/api/routers/: cluster.py  namespaces.py  nodes.py  pods.py  status.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/frontend/src/: App.vue  main.js  style.css
src/frontend/src/api/: index.js
src/frontend/src/components/: BottomMenu.vue  NamespaceList.vue  NodeList.vue  PodDetail.vue  PodList.vue  ResourceBar.vue  StatusBadge.vue  TopMenu.vue
src/frontend/src/stores/: klances.js
src/frontend/src/utils/: format.js
tests/: conftest.py  test_cluster.py  test_namespaces.py  test_nodes.py  test_pods.py  test_status.py
