[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "klances"
version = "0.1.0"
description = "Kubernetes cluster monitoring WebUI and REST API"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "kubernetes>=29.0.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[project.scripts]
klances = "server:main"
klances-dev = "dev:main"

[tool.setuptools]
py-modules = ["server", "dev"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
