[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68"]

[project]
dependencies = [
  "fastapi[standard]>=0.110.0",
  "kubernetes>=29.0.0",
  "uvicorn[standard]>=0.27.0",
]
description = "Kubernetes cluster read-only monitoring dashboard"
name = "klances"
requires-python = ">=3.10"
version = "0.1.3"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.3.0",
  "pip-audit>=2.7.0",
]

[project.scripts]
klances = "server:main"
klances-dev = "dev:main"

[tool.setuptools]
py-modules = ["server", "dev"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
